--- a/src/pages/hub/hub.component.html
+++ b/src/pages/hub/hub.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center h-full w-full">
-  <h1 class="text-3xl mb-4">Добро пожаловать в игру</h1>
+<div class="hub">
+  <h1 class="hub__title">Добро пожаловать в игру</h1>
   <button class="button" (click)="createGame()">Создать игру</button>
 </div>
