--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,21 @@
 @tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: Monocraft;
+  src: url("/fonts/Monocraft.otf");
+}
+
 html,
 body {
   @apply w-full h-full;
+  font-family: Monocraft;
 }
 
 .button {
-  @apply rounded-md bg-slate-800 py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none ml-2;
+  @apply text-3xl border-solid border-4 border-blue-600 px-6 py-3 text-black active:bg-blue-600 active:text-white;
+
+  &_small {
+    @apply text-xl px-2 py-1;
+  }
 }
