fix: Исправление багов

--- a/src/pages/game/game.component.html
+++ b/src/pages/game/game.component.html
@@ -1,2 +1,5 @@
-{{ state$ | async | json }}
-<div id="game-canvas" #gameCanvas></div>
+<div
+  class="w-full h-full flex flex-row items-center justify-center bg-green-500"
+>
+  <div id="game-canvas" #gameCanvas class="border-4 border-green-600"></div>
+</div>
